[tool.poetry]
name = "verify"
version = "0.1.0"
description = ""
authors = ["Jürgen Eckel <juergen@riddleandcode.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
wallycore = "^0.8.9"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
